Release history for Devel-Symdump-Compact

{{$NEXT}}
 - isa-splain now accepts -M parameter to explicitly specify modules to load. This is helpful in handling cases where
   one module inlines others, ( B -> B::CV ) or a module can't be loaded on its own ( Class::MOP::Class )

 [Dependencies::Stats]
 - Dependencies changed since 0.001001, see misc/*.deps* for details
 - develop: +1
 - runtime: +1

 [Internals]
 - factored out _class_subs function
 - Method Resolution mechanics reworked to more closely reflect how perl-itself views methods. This will reduce certain
   redundant duplicate coderefs and only show them at the lowest point in the heirachy where they are defined.
 - Now fatals when inheritance lookup returns nothing and the package had a compile failure.

0.001001 2016-04-01T09:31:35Z ab66fba
 - Minor documentation fixes.

0.001000 2016-03-31T13:55:56Z 3c0283f
 - First version.